--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,6 @@ motor~=3.1.2
 pymongo~=4.3.3
 publitio~=1.3.1
 python-dotenv~=1.0.0
-aiohttp==3.8.4
 Pillow==9.5.0
+pytz~=2023.3.post1
+aiohttp~=3.8.4
