--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,25 @@
+aiohttp==3.8.6
+aiohttp-cors==0.7.0
+aiosignal==1.3.1
+async-timeout==4.0.3
+attrs==23.2.0
+beautifulsoup4==4.12.3
+certifi==2023.11.17
+charset-normalizer==3.3.2
 discord==2.2.3
-motor~=3.1.2
-pymongo~=4.3.3
-publitio~=1.3.1
-python-dotenv~=1.0.0
+discord.py==2.3.2
+dnspython==2.5.0
+frozenlist==1.4.1
+idna==3.6
+iso8601==2.1.0
+motor==3.1.2
+multidict==6.0.4
 Pillow==9.5.0
-pytz~=2023.3.post1
-aiohttp~=3.8.4
-iso8601~=2.1.0
-beautifulsoup4~=4.12.2
+publitio==1.3.1
+pymongo==4.3.3
+python-dotenv==1.0.0
+pytz==2023.3.post1
+requests==2.31.0
+soupsieve==2.5
+urllib3==2.1.0
+yarl==1.9.4
